--- a/cacamacho_Lab2.ipynb
+++ b/cacamacho_Lab2.ipynb
@@ -678,7 +678,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "metadata": {
         "collapsed": true,
         "id": "eqFZgJyyiXcM"
@@ -875,7 +875,7 @@
       "metadata": {
         "id": "T71BRNaG3fev"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -894,7 +894,7 @@
         "id": "-HFjtpl6K81s",
         "outputId": "f690b7c0-8a57-4b34-b471-3d4508ca4181"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -942,7 +942,7 @@
       "metadata": {
         "id": "HjyOAFQW3gc3"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -958,7 +958,7 @@
         "id": "qfqBR0qVLgUz",
         "outputId": "9c320339-41bf-4189-c261-ae30bb90fa11"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1014,7 +1014,7 @@
       "metadata": {
         "id": "4rgHkUNC3haX"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1030,7 +1030,7 @@
         "id": "_e7nY1r6todV",
         "outputId": "15993136-2c97-481b-8a92-2f1b4f176aae"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1085,7 +1085,7 @@
       "metadata": {
         "id": "wpnd21c83jQI"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1101,7 +1101,7 @@
         "id": "a0NW3jM9uCBP",
         "outputId": "1cbbd319-2517-421e-9904-660a6b18e9f8"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1152,7 +1152,7 @@
         },
         "outputId": "f66d5b65-8c73-42f1-f505-83307fc680de"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1179,7 +1179,7 @@
         "id": "OSd4bzgxuvnG",
         "outputId": "1821abbc-a2d2-4ea1-947a-64b4e37d76f4"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1218,7 +1218,7 @@
       "metadata": {
         "id": "Ip600JFN3qHX"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1233,7 +1233,7 @@
         "id": "HuDvpWbBkup-",
         "outputId": "ef43b210-7a8a-42e9-8c9c-ca4ffd85294a"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1249,7 +1249,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": null,
       "metadata": {
         "outputId": "e2c2aeb4-52a2-46c6-92e1-a1bc92a05c5c",
         "colab": {
@@ -1291,7 +1291,7 @@
         "id": "1YaklBXGvFKu",
         "outputId": "10372d17-e22e-4700-ba12-559f4769a337"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1321,7 +1321,7 @@
       "metadata": {
         "id": "2QvadEwIvU6Q"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1349,7 +1349,7 @@
       "metadata": {
         "id": "4vOhtwf0vajY"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1367,7 +1367,7 @@
         "id": "wZgYQKAavqFl",
         "outputId": "5c56ffaf-531c-405c-fbab-1bba0f59dfdc"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1425,7 +1425,7 @@
         },
         "outputId": "99f89088-4156-4530-b838-287cadb00d59"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1485,7 +1485,7 @@
         },
         "outputId": "ffa7bb16-9811-42da-9c07-2a2fcf174d45"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1883,7 +1883,7 @@
         "id": "Jv7L7LtXvSSb",
         "outputId": "d0f9dd05-3e51-46a6-cece-3b2169a78c74"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1927,7 +1927,7 @@
         "id": "qJ9EwF4BvjiH",
         "outputId": "6704beb9-acab-45e2-ef1b-3da0a6593b56"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1961,7 +1961,7 @@
         "id": "B0jmKhuk67bQ",
         "outputId": "d6a77dfe-b8cb-4dfa-d8fb-6894c388de15"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1984,7 +1984,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "qylqVrbqiXcO",
         "colab": {
@@ -2017,7 +2017,7 @@
         "id": "yHIhAsNo7WUy",
         "outputId": "754139c7-fd56-4df3-a06c-e15ec129b1b8"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2030,7 +2030,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "collapsed": true,
         "id": "BGacVDX-iXcO"
@@ -2057,7 +2057,7 @@
       "metadata": {
         "id": "JuJ29l5t7g9Y"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2160,7 +2160,7 @@
       "metadata": {
         "id": "7i0uJGD0v105"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2196,7 +2196,7 @@
       "metadata": {
         "id": "faG3DgEHyyoP"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2220,7 +2220,7 @@
         },
         "outputId": "ccab6c0f-beb8-4c09-e432-625035401e4c"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2268,7 +2268,7 @@
       "metadata": {
         "id": "4mDURPVKkBDD"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2294,7 +2294,7 @@
         },
         "outputId": "fd727b0d-527b-47a4-83b2-9674885cd49f"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2356,7 +2356,7 @@
         },
         "outputId": "b8fe5a9b-7c57-4128-8fc2-7baaf3514be4"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2702,7 +2702,7 @@
       "metadata": {
         "id": "mC9ktLwlxa_T"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2764,7 +2764,7 @@
         },
         "outputId": "308c6817-3875-446d-da1a-ff4dcdbc62ac"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2797,7 +2797,7 @@
         },
         "outputId": "440b3922-247d-45e3-9c8a-3ac6062d2559"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2857,7 +2857,7 @@
         },
         "outputId": "447b5867-eda2-4aa9-8134-573909eabefd"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3313,7 +3313,7 @@
         },
         "outputId": "8ca4e02e-a9f5-48f8-ab91-520f9769125e"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3346,7 +3346,7 @@
         },
         "outputId": "28090181-3249-4e3c-8f6d-cc3b231670e1"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3393,7 +3393,7 @@
         },
         "outputId": "2952ffe8-a933-4c9a-b354-96b8ee407626"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3851,7 +3851,7 @@
         },
         "outputId": "4268a790-bdb6-48b2-fe6c-1956ca35f3e7"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3884,7 +3884,7 @@
         },
         "outputId": "1fc7f270-6327-44ae-c80b-bd1041a8baf5"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3930,7 +3930,7 @@
         },
         "outputId": "cb01f8dd-b11b-412c-b260-d9d88e8249fa"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4383,7 +4383,7 @@
         },
         "outputId": "243f988e-9224-4b30-d5d8-5681ef996851"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4416,7 +4416,7 @@
         },
         "outputId": "6bbf141c-41fd-4eba-cc57-d1996e6e8f1f"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4462,7 +4462,7 @@
         },
         "outputId": "bf1a4a32-1927-48c7-dcff-7c6c7df13c4e"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4908,7 +4908,7 @@
         },
         "outputId": "852728a3-1a9d-42a6-c3ae-17ec6e39ba19"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4940,7 +4940,7 @@
         },
         "outputId": "399c14f7-3b04-4af4-a33e-df8eb6f3b697"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4986,7 +4986,7 @@
         },
         "outputId": "502a9b3e-e46f-4f6a-8329-27b77a941fd4"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5369,7 +5369,7 @@
         },
         "outputId": "131b2a01-5368-4643-edc5-7cb4ed43716e"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5403,7 +5403,7 @@
       "metadata": {
         "id": "hO9y6C9pyj8j"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5429,7 +5429,7 @@
         "id": "d8eiDHB0GpBF",
         "outputId": "9c30560e-1b98-4531-9cb6-698ce3087916"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8055,7 +8055,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 64,
+      "execution_count": null,
       "metadata": {
         "id": "XcYC7BGAiXcf",
         "outputId": "6422a8d2-429f-463d-ba64-57974c9e897b",
@@ -8185,7 +8185,7 @@
         "id": "e_ZmWm4uDLDo",
         "outputId": "9c7f9ecc-1350-48d4-8353-998b7eaf0432"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -8198,6 +8198,27 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Conclusiones**\n",
+        "\n",
+        "1. En el gráfico de Precio de Cierre, observamos una tendencia alcista en general, lo que indica un crecimiento sostenido del valor de las acciones de Apple a lo largo del tiempo. Sin embargo, también se pueden identificar períodos de corrección (disminuciones temporales del precio). Estos períodos suelen ser oportunidades para los inversionistas que buscan comprar acciones a un precio más bajo en un mercado alcista.\n",
+        "\n",
+        "Implicación: Una tendencia alcista sostenida sugiere confianza en la empresa, lo que es positivo para los inversionistas a largo plazo, pero las correcciones periódicas también muestran la volatilidad inherente del mercado.\n",
+        "\n",
+        "2. En el gráfico de Volumen de Transacciones, podemos observar picos de volumen que tienden a coincidir con movimientos significativos en los precios (especialmente en máximos o mínimos). Esto sugiere que los cambios importantes en el precio de las acciones suelen estar acompañados de un aumento en el volumen de transacciones, indicando una alta actividad en el mercado, posiblemente debido a noticias relevantes o informes financieros.\n",
+        "\n",
+        "Implicación: Los inversionistas y traders pueden utilizar el volumen como indicador para validar movimientos de precios. Un aumento en el volumen durante una subida de precio puede confirmar la fuerza de la tendencia, mientras que un alto volumen durante una caída podría indicar ventas masivas.\n",
+        "\n",
+        "3. El gráfico del Promedio Móvil de 50 Días (MA50) muestra que este indicador suaviza las fluctuaciones diarias del precio de cierre y puede ser utilizado para identificar la dirección general del mercado. Cuando el precio de cierre cruza el MA50 hacia arriba, suele indicar una señal de compra (tendencia alcista), mientras que un cruce hacia abajo puede ser una señal de venta (tendencia bajista).\n",
+        "\n",
+        "Implicación: Los promedios móviles son herramientas útiles para los inversionistas que desean seguir tendencias y reducir el ruido del mercado. En este caso, el MA50 es particularmente efectivo para identificar cambios en la dirección de la tendencia a mediano plazo."
+      ],
+      "metadata": {
+        "id": "RY6c5VgI6cvV"
+      }
     },
     {
       "cell_type": "code",
