--- a/cacamacho_Lab2.ipynb
+++ b/cacamacho_Lab2.ipynb
@@ -8231,7 +8231,7 @@
         "id": "tIA0qG-KHGGd",
         "outputId": "c9c089a9-14b1-4a99-cf9a-044af186625a"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8938,7 +8938,7 @@
         "id": "UFTRFYc_JA8g",
         "outputId": "5652cc80-b6d8-4370-d87e-a66cd9294447"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -8971,6 +8971,31 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Entendemos que**\n",
+        "1. Distribución de visitantes por punto de información:\n",
+        "Monumento Pantano de Vargas y Puente de Boyacá parecen ser los puntos turísticos más visitados, lo que sugiere que estos lugares tienen un alto interés histórico y cultural.\n",
+        "Tunja y Villa de Leyva también muestran un buen flujo de visitantes, lo que indica que estas ciudades siguen siendo atractivas para los turistas, probablemente por su patrimonio colonial y cultural.\n",
+        "Los puntos de información menos visitados podrían estar ubicados en destinos menos conocidos o de acceso más difícil.\n",
+        "2. Análisis del tiempo de permanencia:\n",
+        "La mayoría de los visitantes pasan 1 o 2 días, lo cual es común para destinos turísticos que son visitados principalmente en viajes cortos o excursiones de fin de semana.\n",
+        "Hay menos visitas con estancias más largas, lo que puede indicar que muchos turistas visitan estos lugares como parte de un itinerario más amplio, sin pernoctar en el mismo destino.\n",
+        "Esto sugiere que los PITS pueden estar atrayendo principalmente a turistas nacionales o visitantes que prefieren viajes rápidos y económicos.\n",
+        "3. Distribución del presupuesto estimado:\n",
+        "La mayoría de los visitantes parecen gastar entre 300.000 y 1.000.000 COP, lo que sugiere un presupuesto moderado, probablemente relacionado con gastos de transporte, alimentación y alojamiento económico (hoteles y pasadías).\n",
+        "Un porcentaje pequeño de visitantes tiene presupuestos superiores a $1.000.000 COP, lo que podría corresponder a turistas extranjeros o a aquellos que optan por experiencias más exclusivas (hospedajes de lujo o actividades especiales).\n",
+        "La categoría de menor presupuesto (0-300k COP) es menos frecuente, lo que indica que el turismo en la región de Boyacá generalmente implica un gasto mínimo para cubrir alojamiento y actividades básicas.\n",
+        "# **Conclusiones generales:**\n",
+        "Los datos sugieren que el turismo en Boyacá está enfocado en visitas cortas, con un gasto moderado, y atrae a turistas interesados en destinos históricos y culturales.\n",
+        "Hay oportunidades para desarrollar estrategias de promoción en puntos de información menos visitados para equilibrar el flujo turístico y reducir la concentración en lugares como el Puente de Boyacá.\n",
+        "El enfoque en turistas con presupuestos moderados indica la importancia de seguir ofreciendo opciones accesibles, pero también podría ser una oportunidad para desarrollar experiencias de mayor valor agregado para aquellos dispuestos a gastar más."
+      ],
+      "metadata": {
+        "id": "KUt0-9W-MCI9"
+      }
     },
     {
       "cell_type": "code",
