Se creó con Colab

--- a/Quiz_1_Python_NumPy_UNCode_cacamacho.ipynb
+++ b/Quiz_1_Python_NumPy_UNCode_cacamacho.ipynb
@@ -786,7 +786,7 @@
         "import numpy as np\n",
         "\n",
         "def main_diagonal_matrix(A):\n",
-        "    D = np.diag(np.diag(A))\n",
+        "    D = np.diag(np.diag(A).astype(float))\n",
         "    return D"
       ],
       "metadata": {
